@@ -58,6 +58,7 @@ export class StorePageComponent implements OnInit {
   editingTimetable: Timetable;
   editingMapController: MapController;
   editingBanners: Array<string> = [];
+  editingProfileImage: string;
   address: Address = new Address;
   tag = new Tag;
   previewImage;
@@ -91,6 +92,8 @@ export class StorePageComponent implements OnInit {
       this.editingStore = _.cloneDeep(result);
       this.allBanners = this.store.informationImages.map(image => { return { url: image, type: 'url' } });
       this.editingAllBanners = _.cloneDeep(this.allBanners);
+      this.editingBanners = this.store.informationImages.map(image => environment.IMAGE_URL + image);
+      this.editingProfileImage = environment.IMAGE_URL + this.store.profileImage;
     });
     this.route.queryParams.pipe(takeUntil(this.ngUnsubscribe)).subscribe(queryParams => {
       if(queryParams['nav']) {
@@ -204,7 +207,7 @@ export class StorePageComponent implements OnInit {
   }
   async onConfirmEditProfileImageClicked() {
     this.editingStore.profileImage = await this.croppieObj.result({size: {width: 300, height: 300}})
-    $('.merchant__profile-image').attr('src', this.editingStore.profileImage);
+    this.editingProfileImage = this.editingStore.profileImage;
     this.isChanged = true;
     this.isProfileImageOpened = false;
     this.isUploadProfileImage = true;
@@ -369,7 +372,15 @@ export class StorePageComponent implements OnInit {
     }
   }
   onResetProfileImageClicked() {
-    $('.merchant__profile-image').attr('src', environment.IMAGE_URL + this.store.profileImage);
+    this.editingProfileImage = environment.IMAGE_URL + this.store.profileImage;
+    this.isChanged = true;
+    this.isProfileImageOpened = false;
+    this.isUploadProfileImage = false;
+  }
+  onDeleteProfileImageClicked() {
+    this.editingStore.profileImage = null;
+    this.store.profileImage = null;
+    this.editingProfileImage = null;
     this.isChanged = true;
     this.isProfileImageOpened = false;
     this.isUploadProfileImage = false;
@@ -386,7 +397,7 @@ export class StorePageComponent implements OnInit {
     let removeInformationImagesObservable = isInformationImagesRemove ? this.removeInformationImagesObservable() : of([]);
     this.isSaveStoreLoading.start();
     forkJoin([profileImageObservable, informationImagesObservable, removeInformationImagesObservable]).pipe(switchMap((result) => {
-      let informationImages = result[1];
+      let informationImages = <Array<any>>result[1];
       let editingBanners = this.allBanners.map(banner => banner.url);
       informationImages.forEach(informationImage => {
         editingBanners[informationImage.index] = informationImage.image;
