@@ -4,6 +4,11 @@
 
 - v1.0.1040                                 -
 ---------------------------------------------
+- 2020-10-25                                -
+---------------------------------------------
+.: WSM: BugFix: Profile Image with qrcode updated (WSM-209)
+
+---------------------------------------------
 - 2020-10-24                                -
 ---------------------------------------------
 .: WSM: Task: Settings Page (WSM-210)
